--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="a third">
                <h3>Google cloud Platform</h3>
                <img src="./GCP.png" alt="Google cloud Platform" height="100">
-               <p>GCP offers advanced data processing, high performance networking and big data analytics solution </p>
+               <p>GCP offers advanced data processing, high performance networking and big data analytics </p>
             </div>
         </div>
     </body>
