--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         <h1>Top 3 Cloud Providers</h1>
         <div class="container">
             <div class="a first">
-                <h3>Amazon Web Services</h3>
+                <h3>AWS</h3>
                 <img src="./AWS.png" alt="Amazon Web Services" height="100">
                 <p><em>AWS offers a wide range of services including web hosting,AI and IOT</em></p>
             </div>
             <div class="a second">
-                <h3>Microsoft Azure</h3>
+                <h3>Azure</h3>
                 <img src="./azure.jpg" alt="Microsoft Azure" height="100">
                 <p>Azure offers a large set of AI, Machine learning and analytics services.</p>
             </div>
             <div class="a third">
-               <h3>Google cloud Platform</h3>
+               <h3>GCP</h3>
                <img src="./GCP.png" alt="Google cloud Platform" height="100">
                <p>GCP offers advanced data processing, high performance networking and big data analytics </p>
             </div>
